# zephyr_app

./: =5.0.2  CMakeLists.txt  Kconfig  README.md  commands.txt
boards/: xiao_esp32c3.conf  xiao_esp32c3.overlay
dts/bindings/app/: config.yaml
include/: app_config.h  app_events.h  app_uuids.h
src/: adc_sampler.c  ble.c  buttons.c  main.c  status_led.c
